# learn-easy-langent

./: .gitignore  README.md  pyproject.toml
01.第一章/: 1.langgraph_first_demo.py
02.第二章/: 2.1.1_chat_model.py  2.1.2_multi_turn_chat.py  2.2.1_prompt_template.py  2.2.2_few_shot_prompt.py  2.2.3_example_selector.py  2.3.1_str_output_parser.py  2.3.2_json_output_parser.py  2.3.3_pydantic_output_parser.py
02.第二章/2.6_练习/: 练习3思考题.md  练习demo.py
03.第三章/3.1_state_management/: 3.1.1_full_memory.py  3.1.2_window_memory.py  3.1.3_summary_memory.py
03.第三章/3.2_tool/: 3.2.1.2_Check the weather.py
03.第三章/3.3_Comprehensive practice/: 3.3.3_web_query_bot.py  README.md
03.第三章/3.5_练习/: 练习3思考题.md
04.第四章/4.1_chain_workflow/: 4.1.2.3_Advanced practice.py
04.第四章/4.2_routing_chain/: 4.2.2.1_Customer service classification.py
04.第四章/4.3_rag/: 4.4.1_multi-format documents.py  4.4.2_Intelligent semantic segmentation.py  4.4.3_Embedding & vector storage.py  4.4.4.2_FAISSRetriever.py  4.4.4.3_Practical cases.py  4.4.5.2_Full RAG code implementation.py
04.第四章/4.8_练习/: 练习1_新闻多步骤处理.py  练习2_PDF_RAG问答机器人.py  练习3_错误处理与分支降级.py
05.第五章/: README.md  config.py  prompts.py  tools.py
06.第六章/: 6.2_langgraph_work_line.py  6.4.1_Comprehensive practice.py  6.4.2_Branch workflow.py
easy-langent/: pyproject.toml
easy-langent/05.第五章/: DESIGN.md  chains.py  learning_assistant.py  memory.py
