[project]
name = "easy-langent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
]
