[project]
name = "easy-langent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "modelscope>=1.37.1",
    "pdfplumber>=0.11.10",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.12.1",
]
